syntax = "proto3";

package yaref92.events.transport.v1;

option csharp_namespace = "Yaref92.Events.Transport.Grpc.Protos";

message EventEnvelope {
  string event_id = 1;
  string type_name = 2;
  string event_json = 3;
}
